--- a/CafeAppLis/cardapio.html
+++ b/CafeAppLis/cardapio.html
@@ -1,104 +1,220 @@
 <!DOCTYPE html>
+<!--É uma declaração que informa
+  qual tipo de documento utilizado neste momento estou utilizando html:5  -->
 <html>
+<!--Tag de abertura do HTML = HyperText Markup Language (Hiper texto)-->
 
 <head>
-  <meta charset="UTF-8">
-  <title>Cardápio</title>
+  <!-- Uma das principais tag's dentro do html, utilizada para configurações e informações para o navegador-->
+  <meta charset="UTF-8"> <!-- Tag utilizada sobre os caracteres especiais utilizadas na página.-->
+
+  <title>Cardápio</title> <!-- Título da página que se encontra na aba do navegador  -->
 
   <!-- Bootstrap - CSS -->
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Utilização do bootstrap-->
+  <!-- Importa o bootstrap 5, via CDN. Com ele não precisa do CSS, pois ele tem sua propria estilização.-->
+  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+  <!-- Tag corpo onde é impresso todo o conteudo como: textos, imagens, etc.-->
+
   <header>
+    <!-- A barra que fica localizado no topo da pagina, onde apresenta a logo da pagina-->
+
     <!-- Toolbar -->
+
+
+    <!-- Toolbar -->
+    <!--Barra de ferramenta de desenvolvedor web-->
+    <!--Mostra as cores utilizadas na pagina, personaliza as dimensões de redimencionamento na janela, edita o html, posiciona frames, caixa de busca na edição das CSS e do html de uma pagina, validação-->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+
+
+      <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
+
       <div class="container-fluid">
+
+        <!-- A .navbar-brand classe é usada para destacar a marca/logotipo/nome do projeto da página-->
+
+        <!-- A <a> tag ancora define um hiperlink, que pode ser adicionado o link de referencia. -->
+
         <a class="navbar-brand" href="#">
           Coffee
+          <!-- A <small> tag define um texto pequeno-->
+
           <small>Arábica</small>
         </a>
+        <!--Fechamento da tag <a> Ancora-->
+
+
+        <!-- A tag button é utlizada para criar algo clicavel -->
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+          <!-- O elemento HTML <span> é um conteiner generico em linha para definir o texto e a marcação que ele possui. Series conteudos agrupados. -->
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!--Fechamento da tag <button>-->
+
+        <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+            <!-- Abertura da tag ul = lista não ordenada-->
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
+              <!-- Abertura da tag li = Item da lista desordenada com classificação nav-item para estilização-->
+              <a class="nav-link" href="./index.html">Home</a> <!-- A <a> tag ancora define um hiperlink, que pode ser adicionado o link de referncia.-->
             </li>
+            <!--Fechando item da lista-->
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Cardápio</a>
+              <!-- Adicionando mais um item dentro da tag li = Item da lista desordenada com classificação nav-item para estilização-->
+              <a class="nav-link active" aria-current="page" href="#">Cardápio</a> <!-- A <a> tag ancora define um hiperlink, que pode ser adicionado o link de referncia.-->
             </li>
+            <!--Fechando item da lista-->
             <li class="nav-item">
-              <a class="nav-link" href="#">Sobre</a>
+              <!-- Adicionando mais um item dentro da tag li = Item da lista desordenada com classificação nav-item para estilização-->
+              <a class="nav-link" href="#">Sobre</a> <!-- A <a> tag ancora define um hiperlink, que pode ser adicionado o link de referncia.-->
             </li>
-          </ul>
+            <!--Fechando item da lista-->
+          </ul> <!-- Fechamento da tag <ul> lista não ordenada -->
         </div>
+        <!--Fechando div que foi aberta-->
       </div>
+      <!--Fechando div que foi aberta-->
     </nav>
+    <!--Fechando nav que foi aberta-->
 
-  </header>
+  </header> <!-- Fechamento do cabeçalho da página-->
+
+  <!-- A tag de divisão de conteudo a <main> é responsavel por armazenar o conteudo principal da pagina, para o navegador ele dá mais importancia ao contúdo que está dentro da main, pois ele identifica tudo que estiver dentro dela é um conteúdo de maior importância.-->
+
   <main>
+
+    <!--Utilização da tag <section> é utilizado para separar conteudo que quero utilizar dentro de uma "caixinha". Abrangem todo conteudo dentro de uma seção. Onde o conteudo faz sentido junto e será dado uma atenção especial-->
+
     <section class="my-3">
 
-      <!-- Grid -->
+      <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
       <div class="container">
 
         <!-- Button trigger modal -->
+
+        <!-- O botão indica que ao clicar o botão cinza será adiocando item ao cardapio.-->
         <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">
           +
         </button>
+        <!--Fechamento do butão-->
 
-        <!-- Modal -->
+        <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
         <div class="modal fade" data-bs-keyboard="false" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+          <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
           <div class="modal-dialog">
+
+            <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
             <div class="modal-content">
+
+              <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
               <div class="modal-header">
+
+                <!-- Responsável pelo título do modal utilizando a tag <h5> título de nível-->
                 <h5 class="modal-title" id="exampleModalLabel">Adicionar Item</h5>
+
+                <!-- Botão de fechar o modal com javascript  utilizando o data-bs-dismiss-->
+
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
+
+              <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
               <div class="modal-body">
 
-                <h1>Conteúdo do modal</h1>
+                <h1>Conteúdo do modal</h1><!-- Responsável pelo título do modal utilizando a tag <h1> título de nível principal-->
 
-                <!-- Formulário -->
+                <!-- Formulário que se encontra dentro do modal-->
+
                 <form id="foodForm">
+
+                  <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
                   <div class="mb-3">
+
                     <!-- Nome -->
-                    <label for="nome" class="form-label">Nome</label>
-                    <input type="text" name="nome" id="nome" class="form-control">
+
+                    <!-- A tag label está relacionado ao componente que separa o conteúdo colocado acima do campo de preenchimento do input, mas dentro de um mesmo invólucro -->
+
+                    <label for="name" class="form-label">Nome</label>
+
+                    <!-- O formulário será preenchido pela tag <input>-->
+
+                    <input type="text" name="name" id="name" class="form-control">
+
+                    <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
                     <div id="nomeHelp" class="form-text">Adicione o nome do Alimento.</div>
                   </div>
+                  <!--Fechamento da tag de divisão de conteudo-->
 
-                  <!-- Descrição -->
+                  <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
                   <div class="mb-3">
-                    <label for="descricao" class="form-label">Descrição</label>
-                    <input type="text" name="descricao" id="descricao" class="form-control">
+
+                    <!-- Tag <label> está ligado a atribuição que divide os conteúdos no invólucro, dentro do input.-->
+
+                    <label for="description" class="form-label">Descrição</label>
+
+                    <!-- tag input preenche o formulário conforme a descrição que pede e dá exemplos para o usurarios digitarem e enviar a solicitação dentro da pagina. -->
+
+                    <input type="text" name="description" id="description" class="form-control">
                   </div>
 
-                  <!-- Preço -->
+                  <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
+
                   <div class="mb-3">
+
+                    <!-- Tag <label> está ligado a atribuição que divide os conteúdos no invólucro, dentro do input.-->
+
                     <label for="preco" class="form-label">Preço</label>
+
+                    <!-- tag <input> envia o preenchimento realizado pelo usuario.-->
+
                     <input type="text" name="preco" id="preco" class="form-control">
-                  </div>
 
-                  <!-- Imagem -->
-                  <div class="mb-3">
-                    <label for="imagem" class="form-label">Imagem</label>
-                    <input type="text" name="imagem" id="imagem" class="form-control">
-                  </div>
+                    <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos.-->
 
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <div class="mb-3">
 
-                    <!-- <input type="submit" value="Adicionar"> -->
-                    <button type="submit" class="btn btn-primary" id="adicionarFoodButton">
-                      Adicionar
-                    </button>
-                  </div>
+                      <!-- Tag <label> está ligado a atribuição que divide os conteúdos no invólucro, dentro do input.-->
+
+                      <label for="image" class="form-label">Imagem</label>
+
+                      <!-- tag <input> envia o preenchimento realizado pelo usuario.-->
+
+                      <input type="text" name="image" id="image" class="form-control">
+                    </div>
+                    <!--Fechamento da tag div-->
+
+                    <!-- A <div> tag utilizada de forma generica para divisão de conteudo como: estilização, organização ou agrupalos sendo utilizada no roda-pé da pagina.-->
+
+                    <div class="modal-footer">
+
+
+                      <!-- Botão de fechar o modal. Tem a mesma função header modal do formulário-->
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+
+                      <button type="reset" class="btn btn-secondary" data-bs-dismiss="modal" float-start>Limpar</button>
+
+                      <!-- <input type="submit" value="Adicionar"-->
+                      <!-- Botão que submete um novo item do formulário com id adicionar-->
+                      <button type="submit" class="btn btn-primary" id="adicionarFoodButton">
+                        Cadastrar
+                      </button>
+                    </div>
                 </form>
 
               </div>
@@ -108,22 +224,30 @@
         </div>
 
         <!-- Linha -->
+        <!-- Essa tag div faz a listagem do cardápio mostrados na tela -->
         <div id="itens-cardapio" class="row">
-
           <!-- Colunas-->
 
           <!-- beforeend -->
         </div>
+        <!--Fechamento da tag div-->
 
     </section>
+    <!--Fechamento da tag section-->
 
   </main>
+  <!--Fechamento do main-->
   <footer></footer>
+  <!--Abertura e fechamento do roda-pé-->
 
   <!-- Cardápio -->
+
+  <!-- Tag script que faz a coenxão com o diretório cardapio.js que existe na pasta js -->
   <script src="./js/cardapio.js" type="module"></script>
 
   <!-- Bootstrap - Js -->
+
+  <!-- Tag que faz toda animação do bootstrap para animação de todo do framework, modal...-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
